# crewmarketDeployed

./: .gitignore  .vercelignore  JSON_EXTRACTION_FIX.md  Procfile  README.md  market_comparison_report.html  market_comparison_report.json  pyproject.toml  report.md  requirements.txt
api/: index.py
src/db/: chroma.sqlite3
src/marketcompare/: __init__.py  api.py  crew.py  enhanced_models.py  main.py
src/marketcompare/company_docs/annual_reports/: annual_report_2024.txt
src/marketcompare/company_docs/customer_feedback/: customer_feedback_summary_q1_2025.txt
src/marketcompare/company_docs/financial_statements/: balance_sheet_2024.txt  cash_flow_statement_2024.txt  income_statement_2024.txt
src/marketcompare/company_docs/internal_reports/: marketing_report_q1_2025.txt  operational_report_q1_2025.txt  sales_report_q1_2025.txt
src/marketcompare/company_docs/product_info/: internal_pricing_document.txt  product_roadmap_h2_2025.txt
src/marketcompare/config/: agents.yaml  tasks.yaml
src/marketcompare/knowledge/: user_preference.txt
src/marketcompare/tools/: pdf_report_tool.py
src/results/: market_comparison_report.html  market_comparison_report.json  market_comparison_report_new1.json  market_comparison_report_new2.json
tests/: market_comparison_reportV1.json  market_comparison_reportV2FAILED.json  market_comparison_reportV3.json  market_comparison_reportV4.json  market_comparison_reportV5.json  market_comparison_reportV6.json
