[project]
name = "marketcompare"
version = "0.1.0"
description = "marketcompare using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0",
    "pymongo>=4.13.1",
]

[project.scripts]
marketcompare = "marketcompare.main:run"
run_crew = "marketcompare.main:run"
train = "marketcompare.main:train"
replay = "marketcompare.main:replay"
test = "marketcompare.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
